ProyectoAnalizador/CarArchivos/Gramática.txt
REGLAS GRAMÁTICAS ASIGNADAS
Melanie Aylén Ciani
LEGAJO: 53325


programa: instrucciones;
instrucciones:
	instrucción
	| instrucciones instrucción
	;
instruccion: bucle ;
bucle:
	'while' '(' condicion ')' '{' sentencia '}'
	;
sentencia:
	salida | terminar
	| salida sentencia
	| terminar
	;
salida:
	'printf' '(' cadena ')' ';'
	;
terminar:
	'break' ';'
condicion:
	'0' |
	'1'
	;
cadena:
	'\' caracteres '\'
	;
caracteres:
	caracter
	| caracteres caracter
	;
caracter:
	letra
	| digito
	| simbolo
	;
letra:
	'a' ... 'z
	| 'A' ... 'Z'
	;
digito:
	'0' ... '9'
	;
simbolo:
	'.' | ',' | '!' | '?' | ':' | ';' | '''
	;
